monster/register APIを追加
